2007-06-28  Jens Granseuer  <jensgr@gmx.net>

	* appearance.glade: add explicit width_request to our icon views so we
	can use GTK_POLICY_NEVER for horizontal scrollbars and still properly
	resize the window (part of bug #451585)

2007-06-28  Jens Granseuer  <jensgr@gmx.net>

	* appearance-themes.c: (themes_init):
	* appearance.glade: move "selection_mode" to glade file and remove
	hard-coded item width

2007-06-28  Jens Granseuer  <jensgr@gmx.net>

	* appearance-themes.c: (theme_store_sort_func), (themes_init): fix leaks,
	use g_list_foreach instead of open-coded loop

2007-06-27  Denis Washington  <denisw@svn.gnome.org>

	* appearance-themes.c: (theme_list_sort_func, themes_init):
	Load the metatheme thumbnails in the order they are in the list.

2007-06-27  Denis Washington  <denisw@svn.gnome.org>

	* appearance.h:
	* appearance-themes.c: (theme_list_sort_func, themes_init):
	Make the Custom theme always the first in the list and make it's label bold
	to diffentiate it from the other themes.

2007-06-26  Jens Granseuer  <jensgr@gmx.net>

	* appearance-themes.c: (theme_is_equal): ... and actually accept an empty
	color scheme setting as valid

2007-06-26  Jens Granseuer  <jensgr@gmx.net>

	* appearance-style.c: (prepare_list):
	no need to reassign thumbnails inside the loop

	* appearance-themes.c: (theme_load_from_gconf), (theme_is_equal):
	consider NULL and "" equal for color schemes; also reshuffle
	functions a bit and fix the include list

2007-06-26  Denis Washington  <denisw@svn.gnome.org>

	* gtk-theme-thumbnailing.png:
	* icon-theme-thumbnailing.png:
	* window-theme-thumbnailing.png:
	Placeholder thumbnails for gtk+, metacity and icon themes.

	* Makefile.am: Add new files.

	* appearance.h:
	* appearance-style.h:
	* appearance-style.c: (style_init), (style_shutdown), (prepare_list):
	Use the new placeholder thumbnails for the details window's theme lists.

	* appearance-main.c: Call new style_shutdown ().
