@@ -1,3 +1,11 @@
+2007-06-27  Denis Washington  <denisw@svn.gnome.org>
+
+	* appearance.glade:
+	* appearance-style.c: (cursor_size_scale_value_changed_cb), 
+	(cursor_theme_changed), (prepare_list), (update_cursor_size_scale):
+	* theme-util.h:
+	Add cursor themes support.
+
 2007-06-28  Jens Granseuer  <jensgr@gmx.net>
 
 	* appearance.glade: add explicit width_request to our icon views so we
@@ -17,7 +25,7 @@
 
 2007-06-27  Denis Washington  <denisw@svn.gnome.org>
 
-	* appearance-themes.c: (theme_list_sort_func, themes_init):
+	* appearance-themes.c: (theme_list_sort_func), (themes_init):
 	Load the metatheme thumbnails in the order they are in the list.
 
 2007-06-27  Denis Washington  <denisw@svn.gnome.org>
